# TermEngine

./: .gitignore  .gitmodules  BUILDING  BUILDING.md  CMakeLists.txt  LICENSE  Makefile  NOTICE  README.md  ROADMAP.md  TODO.md  TODO.txt  TermEngine.sln  TermEngine.vcxproj  TermEngine.vcxproj.filters  clean-build-files.sh  copy-files-to-build.sh  doxygen.conf  gl_includes.h  includes.h  init.cc  init.h  main.cc  sdl_includes.h  term_engine  types.h  vcpkg.json
application/: Application.cc  Application.h
docs/pages/: mainpage.md  scripting.md  todolist.md
drawing/: DrawFunctions.cc
ecs/: ComponentManager.cc  ComponentManager.h
events/: KeyBinding.cc  KeyBinding.h  KeyManager.h  MouseManager.cc  MouseManager.h
fonts/: FontAtlas.cc  FontAtlas.h  FontAtlasManager.cc  FontAtlasManager.h
gameobjects/: Base.h
glyphs/: Glyph.cc  Glyph.h  GlyphSet.cc  GlyphSet.h
licenses/: von
logging/: Logger.cc  Logger.h
lua/: colors.lua  load.lua  noprogram.lua  objects.lua  readonly.lua
lua/common/: inspect.lua  overrides.lua  setText.lua
lua/constants/: colours.lua  validators.lua  values.lua
lua/objects/: box.lua  form.lua  input.lua  interactive.lua  line.lua  menu.lua  objects.lua  state.lua  text.lua
modules/: Application.cc  Application.h  CharacterCache.cc  CharacterCache.h  EventManager.cc  EventManager.h  FPSManager.cc  FPSManager.cpp  FPSManager.h  InputManager.cc  InputManager.h  KeyManager.cc  KeyManager.h  MouseManager.cc  MouseManager.h  StateManager.cc  StateManager.h  TerminalWindow.cc  TerminalWindow.cpp  TerminalWindow.h  Timer.cc  Timer.h
modules/GameObjects/: Base.cc
projects/: funcs.lua  init.lua  load.lua  noprogram.lua
projects/debug/: main.lua
projects/example/: main.lua  player.lua
projects/noprogram/: main.lua
projects/sudoku/: main.lua  sudoku.lua
rendering/: GlyphManager.cc  GlyphManager.h  GlyphSet.cc  GlyphSet.h  ShaderManager.cc  ShaderManager.h  VertexManager.cc  VertexManager.h  Window.cc  Window.h  WindowManager.cc  WindowManager.h
resources/scripts/: init.lua
scenes/: Scene.cc  Scene.h  SceneManager.cc  SceneManager.h
scripting/: Assert.h  ScriptManager.cc  ScriptManager.h  ScriptingInterface.cc  ScriptingInterface.h
scripts/: init.lua  test.lua
shaders/: Shader.cc  Shader.h  ShaderManager.cc  ShaderManager.h
src/: Application.cc  Application.h  main.cc
src/application/: Application.cc  Application.h
src/background/: Background.cc  Background.h
src/data/: Uniform.cc  Uniform.h
src/drawing/: DrawFunctions.cc  DrawFunctions.h
src/events/: EventManager.cc  EventManager.h  InputManager.cc  InputManager.h  KeyBinding.cc  KeyBinding.h  KeyManager.cc  KeyManager.h  Listener.cc  Listener.h
src/fonts/: FontAtlas.cc  FontAtlas.h  FontAtlasManager.cc  FontAtlasManager.h
src/glyphs/: Glyph.cc  Glyph.h  GlyphSet.cc  GlyphSet.h
src/logging/: Logger.cc  Logger.h
src/objects/: Audio.cc  Audio.h  Background.cc  Background.h  BaseObject.cc  BaseObject.h  BoxObject.cc  BoxObject.h  Character.h  EventListener.cc  EventListener.h  FontAtlas.cc  FontAtlas.h  GameObject.cc  GameObject.h  GameScene.cc  GameScene.h  Glyph.h  Object.cc  Object.h  ObjectManager.cc  ObjectManager.h  OutlineBoxObject.cc  OutlineBoxObject.h  SpriteObject.cc  SpriteObject.h  TextObject.cc  TextObject.h  TimedFunction.cc  TimedFunction.h  Window.cc  Window.h
src/rendering/: Background.cc  Background.h  Buffer.cc  Buffer.h  Character.h  CharacterMap.cc  CharacterMap.h  FontAtlas.cc  FontAtlas.h  ShaderProgram.cc  ShaderProgram.h  Texture.cc  Texture.h  TexturePacker.cc  TexturePacker.h  Window.cc  Window.h
src/resources/: Audio.cc  Audio.h  Background.cc  Background.h  FontAtlas.cc  FontAtlas.h  Glyph.h  Window.cc  Window.h
src/scenes/: Scene.cc  Scene.h  SceneManager.cc  SceneManager.h
src/scripting/: IndexFunctions.cc  IndexFunctions.h  ScriptingInterface.cc  ScriptingInterface.h
src/shaders/: CommonUniform.cc  CommonUniform.h  Shader.cc  Shader.h  ShaderManager.cc  ShaderManager.h  ShaderProgram.cc  ShaderProgram.h  ShaderUniform.cc  ShaderUniform.h  background.h  character.h  default.h  glyph.h
src/system/: AudioFunctions.cc  AudioFunctions.h  CLArguments.cc  CLArguments.h  DebugFunctions.cc  DebugFunctions.h  FPSManager.cc  FPSManager.h  FileFunctions.cc  FileFunctions.h  ImageFunctions.cc  ImageFunctions.h  Init.cc  Init.h  Window.cc  Window.h
src/timing/: FPSManager.cc  FPSManager.h  TimedFunction.cc  TimedFunction.h  Timer.cc  Timer.h
src/usertypes/: Background.cc  Background.h  Character.cc  Character.h  CharacterMap.cc  CharacterMap.h  EventListener.cc  EventListener.h  Flaggable.cc  Flaggable.h  GameScene.cc  GameScene.h  GameWindow.cc  GameWindow.h  Timer.cc  Timer.h  Window.cc  Window.h
src/utility/: AudioUtils.cc  AudioUtils.h  Color.h  ConversionUtils.cc  ConversionUtils.h  DebugFunctions.cc  DebugFunctions.h  DebugUtils.cc  DebugUtils.h  FTUtils.cc  FTUtils.h  FileUtils.cc  FileUtils.h  GLUtils.cc  GLUtils.h  GenericUtils.h  Glyph.cc  Glyph.h  ImGuiUtils.cc  ImGuiUtils.h  IndexUtils.cc  IndexUtils.h  Init.cc  Init.h  LogUtils.cc  LogUtils.h  LoggingUtils.cc  LoggingUtils.h  SDLUtils.cc  SDLUtils.h  SolUtils.cc  SolUtils.h  SpdlogUtils.cc  SpdlogUtils.h  TexturePacker.cc  TexturePacker.h  glmUtils.h  miniaudio.cc  stbi.cc
src/view/: View.cc  View.h
src/window/: Window.cc  Window.h
states/: StateManager.cc  StateManager.h
text/: Glyph.cc  Glyph.h  GlyphManager.cc  GlyphManager.h  GlyphSet.cc  GlyphSet.h
timing/: FPSManager.cc  FPSManager.h  Timer.cc  Timer.h
utility/: Actions.cc  Actions.h  CharacterRange.cpp  CharacterRange.h  Color.h  DebugFunctions.cc  DebugFunctions.h  FTUtils.cc  FTUtils.h  GLUtils.cc  GLUtils.h  Glyph.cc  Glyph.h  Init.cc  KeyActions.cpp  KeyActions.h  KeyBinding.cc  KeyBinding.cpp  KeyBinding.h  LoggingUtils.cc  SDLIncludes.h  SDLUtilities.h  SDLUtils.h  SolUtils.h  Types.h  enttUtils.cc  enttUtils.h  spdlogUtils.cc  spdlogUtils.h
utility/bindings/: Binding.cpp  Binding.h  KeyBinding.cc  KeyBinding.h  MouseBinding.h  (+1 more)
window/: Window.cc  Window.h  WindowManager.cc  WindowManager.h
(+98 files in other folders)
